deps/v8/test/message/regress/fail/regress-8409.out
*%(basename)s:5: SyntaxError: Unexpected token )
[().x] = 1
  ^
SyntaxError: Unexpected token )
